review suggestion - Use Path.of instead of Paths.get in testcase